Pre schoolwork completion

--- a/index.html
+++ b/index.html
@@ -5,8 +5,36 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>Leslie Burt</title>
 </head>
 <body>
+     
+    <h1>My Favorite Things</h1>
+
+    <img src="LMB.jpeg" width="100">
+
+    <h2>My Top Movies</h2>
+
+    <ol>
+        <li>The Notebook</li>
+        <li>The Bestman</li>
+        <li>Sparkle</li>
+        <li>Rush Hour</li>
+        <li>Love and Basketball</li>
+    </ol>
+
+    <h2>My Favorite Places to Visit</h2>
+
+    <ul>
+        <li>Jamaica</li>
+        <li>Puerto Vallerta</li>
+        <li>Cancun</li>
+        <li>Cabo</li>
+        <li>Las Vegas</li>
+    </ul>
+
+    <a href="https://www.linkedin.com/in/leslie-burt-1a919abb/">LinkedIn</a>
+
 </body>
 </html>
+
